# streaming_llama

./: CMakeLists.txt  LICENSE  README.md  driver.py  localsock.py  model_unpickler.py  regex_question  todo.txt
codellama/: generation.py
cuda_old/: Cuda.cpp  TestCuda.cpp
src/: Bf16.cpp  Bf16.h  Checker.cpp  Checker.h  Common.cpp  Common.h  Cuda.cpp  Cuda.h  Deparallelizer.cpp  EvaluationTimings.h  Evaluator.cpp  Exception.h  LayerNormalization.h  LlamaModel.h  Masking.h  Matmul.cpp  Matmul.h  Metal.hpp  MetalHelpers.cpp  MetalHelpers.h  NonTransformerWeights.h  Scratch.h  Socket.cpp  Socket.h  TestCuda.cpp  TestMemoryBandwidth.cpp  TestSgemm.cpp  TestSimpleMatvec.cpp  Timer.cpp  Timer.h  TransformerBlock.h  TransformerBlockScratch.cpp  TransformerBlockScratch.h  Weights.h
src/cuda/: layerNorm.cu  rope.cu  swilu.cu
